--- a/home.html
+++ b/home.html
@@ -175,6 +175,37 @@
     ]
   },
   {
+    "title": "Vén màn chuyện tình 6 năm của tài tử Kim Soo Hyun và bạn gái kém 12 tuổi",
+    "content": "Mối quan hệ tình cảm kéo dài 6 năm giữa tài tử Kim Soo Hyun và nữ diễn viên Kim Sae Ron đã được tiết lộ qua một buổi livestream của kênh YouTube Viện Garo Sero. Họ bắt đầu hẹn hò từ năm 2015 khi Kim Sae Ron mới 15 tuổi và Kim Soo Hyun 27 tuổi, nhưng đã chia tay vào năm 2021. Sau khi Kim Sae Ron qua đời vào tháng 2/2025, Kim Soo Hyun bị chỉ trích vì không gửi lời chia buồn và không tham dự tang lễ, dẫn đến sự thất vọng từ phía người hâm mộ.",
+    "link": "https://dantri.com.vn/giai-tri/ven-man-chuyen-tinh-6-nam-cua-tai-tu-kim-soo-hyun-va-ban-gai-kem-12-tuoi-20250311211128345.htm",
+    "cat": "giai-tri",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Mối quan hệ giữa Kim Soo Hyun và Kim Sae Ron diễn ra trong bao lâu?",
+    "answers": [
+      {
+        "text": "6 năm",
+        "correct": true
+      },
+      {
+        "text": "2 năm",
+        "correct": false
+      },
+      {
+        "text": "4 năm",
+        "correct": false
+      },
+      {
+        "text": "1 năm",
+        "correct": false
+      },
+      {
+        "text": "3 năm",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Ukraine đề xuất điều kiện hòa bình cho EU",
     "content": "Ông Andrii Yermak, Chánh Văn phòng Tổng thống Ukraine, đã đề xuất ba điều kiện quan trọng với Liên minh châu Âu để đảm bảo hòa bình lâu dài ở Ukraine. Các điều kiện này bao gồm việc bảo đảm an ninh cho Ukraine, tăng cường các biện pháp trừng phạt đối với Nga, và kiểm soát tài sản bị đóng băng của Nga để hỗ trợ Ukraine. Ông cũng nhấn mạnh tầm quan trọng của sự đoàn kết châu Âu trong việc đạt được hòa bình.",
     "link": "https://dantri.com.vn/the-gioi/ukraine-de-xuat-dieu-kien-hoa-binh-cho-eu-20250311211537971.htm",
@@ -1632,6 +1663,33 @@
     ]
   },
   {
+    "title": "Gan nhiễm mỡ có tiến triển thành viêm gan?",
+    "content": "Gan nhiễm mỡ là tình trạng mỡ thừa tích tụ trong gan, có thể dẫn đến viêm gan, nhưng không phải lúc nào cũng như vậy. Những người mắc gan nhiễm mỡ không do bia rượu thường ít có nguy cơ tiến triển thành viêm gan. Ngược lại, gan nhiễm mỡ do bia rượu có thể gây tổn thương nghiêm trọng và dẫn đến xơ gan nếu không được điều trị. Để phòng ngừa, người bệnh cần thay đổi lối sống, chế độ ăn uống và tập luyện thường xuyên.",
+    "link": "https://vnexpress.net/gan-nhiem-mo-co-tien-trien-thanh-viem-gan-4859874.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Gan nhiễm mỡ có thể chuyển thành viêm gan không?",
+    "answers": [
+      {
+        "text": "Có, nhưng không phải tất cả trường hợp.",
+        "correct": true
+      },
+      {
+        "text": "Không, gan nhiễm mỡ không ảnh hưởng gì.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ có trường hợp gan nhiễm mỡ do bia rượu mới tiến triển.",
+        "correct": false
+      },
+      {
+        "text": "Gan nhiễm mỡ luôn dẫn đến viêm gan.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Chuyên gia: 'Tiêm gộp nhiều vaccine tạo hiệu quả miễn dịch sớm'",
     "content": "Theo TS.BS Nguyễn An Nghĩa, việc tiêm gộp nhiều vaccine cho trẻ có thể tạo ra hiệu quả miễn dịch tốt mà không làm quá tải hệ miễn dịch. Mặc dù có một số lo ngại từ phụ huynh về an toàn, nhưng các nghiên cứu cho thấy việc tiêm vaccine cùng lúc không chỉ tiết kiệm thời gian và chi phí cho phụ huynh mà còn giúp hệ miễn dịch trẻ hình thành nhiều kháng thể bảo vệ. Tuy nhiên, cần phải tuân thủ các quy định và khám sàng lọc trước khi tiêm để đảm bảo an toàn cho trẻ.",
     "link": "https://vnexpress.net/chuyen-gia-tiem-gop-nhieu-vaccine-tao-hieu-qua-mien-dich-som-4859682.html",
@@ -1681,33 +1739,6 @@
       },
       {
         "text": "Làm yếu hệ miễn dịch.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Gan nhiễm mỡ có tiến triển thành viêm gan?",
-    "content": "Gan nhiễm mỡ là tình trạng mỡ thừa tích tụ trong gan, có thể dẫn đến viêm gan, nhưng không phải lúc nào cũng như vậy. Những người mắc gan nhiễm mỡ không do bia rượu thường ít có nguy cơ tiến triển thành viêm gan. Ngược lại, gan nhiễm mỡ do bia rượu có thể gây tổn thương nghiêm trọng và dẫn đến xơ gan nếu không được điều trị. Để phòng ngừa, người bệnh cần thay đổi lối sống, chế độ ăn uống và tập luyện thường xuyên.",
-    "link": "https://vnexpress.net/gan-nhiem-mo-co-tien-trien-thanh-viem-gan-4859874.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Gan nhiễm mỡ có thể chuyển thành viêm gan không?",
-    "answers": [
-      {
-        "text": "Có, nhưng không phải tất cả trường hợp.",
-        "correct": true
-      },
-      {
-        "text": "Không, gan nhiễm mỡ không ảnh hưởng gì.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ có trường hợp gan nhiễm mỡ do bia rượu mới tiến triển.",
-        "correct": false
-      },
-      {
-        "text": "Gan nhiễm mỡ luôn dẫn đến viêm gan.",
         "correct": false
       }
     ]
@@ -3874,33 +3905,6 @@
     ]
   },
   {
-    "title": "Tài tử \"Nữ hoàng nước mắt\" phản hồi tin đồn quấy rối nữ diễn viên 15 tuổi",
-    "content": "Tài tử Kim Soo Hyun đã lên tiếng phản hồi trước tin đồn rằng anh đã có mối quan hệ tình cảm với nữ diễn viên Kim Sae Ron từ khi cô mới 15 tuổi. Trước thông tin gây chấn động từ một kênh YouTube, phía Kim Soo Hyun phủ nhận và khẳng định sẽ khởi kiện những người phát tán tin đồn sai lệch. Công ty quản lý của anh cũng nhấn mạnh sự đau buồn trước sự ra đi của Kim Sae Ron và lên án hành vi trục lợi từ thông tin sai sự thật.",
-    "link": "https://dantri.com.vn/giai-tri/tai-tu-nu-hoang-nuoc-mat-phan-hoi-tin-don-quay-roi-nu-dien-vien-15-tuoi-20250310223036060.htm",
-    "cat": "giai-tri",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Kim Soo Hyun đã phản hồi như thế nào về tin đồn hẹn hò với Kim Sae Ron?",
-    "answers": [
-      {
-        "text": "Kim Soo Hyun phủ nhận tin đồn và sẽ khởi kiện kênh phát tán thông tin sai lệch.",
-        "correct": true
-      },
-      {
-        "text": "Kim Soo Hyun xác nhận mối quan hệ tình cảm với Kim Sae Ron.",
-        "correct": false
-      },
-      {
-        "text": "Kim Soo Hyun không có bình luận về tin đồn này.",
-        "correct": false
-      },
-      {
-        "text": "Kim Soo Hyun đã thừa nhận đã hẹn hò với Kim Sae Ron trong quá khứ.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Nhà đất bố đứng tên, có cần sang tên cho con trước khi bố mất?",
     "content": "Bài viết giải đáp thắc mắc về việc có cần thiết phải sang tên quyền sử dụng đất cho con trước khi bố mất hay không. Theo luật sư, giấy chứng nhận quyền sử dụng đất vẫn có giá trị mặc dù người đứng tên đã mất, nhưng gia đình sẽ cần thực hiện thủ tục sang tên sau khi bố mất. Việc sang tên trước khi mất là không cần thiết, nhưng nên lập di chúc để đảm bảo thuận lợi cho việc thực hiện các thủ tục liên quan.",
     "link": "https://tuoitre.vn/nha-dat-bo-dung-ten-co-can-sang-ten-cho-con-truoc-khi-bo-mat-20250303193515859.htm",
@@ -4187,6 +4191,33 @@
     ]
   },
   {
+    "title": "Cách phân biệt giữa 'va chạm giao thông' và 'tai nạn giao thông'",
+    "content": "Bài viết phân tích sự khác biệt giữa 'va chạm giao thông' và 'tai nạn giao thông' dựa trên mức độ gây thiệt hại về người và tài sản. Va chạm giao thông được định nghĩa là những sự cố có thiệt hại dưới mức quy định của tai nạn giao thông, như gây thương tích cho một người với tỷ lệ thương tật dưới 11% hoặc thiệt hại tài sản dưới 10 triệu đồng. Ngược lại, tai nạn giao thông có mức độ thiệt hại nghiêm trọng hơn, dẫn đến việc xử lý pháp lý khác nhau, trong đó tai nạn có thể bị truy cứu trách nhiệm hình sự.",
+    "link": "https://vnexpress.net/cach-phan-biet-giua-va-cham-giao-thong-va-tai-nan-giao-thong-4859145.html",
+    "cat": "phap-luat",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Va chạm giao thông khác tai nạn giao thông như thế nào?",
+    "answers": [
+      {
+        "text": "Va chạm giao thông có thiệt hại nhẹ hơn tai nạn giao thông.",
+        "correct": true
+      },
+      {
+        "text": "Va chạm giao thông luôn gây thiệt hại nặng nề.",
+        "correct": false
+      },
+      {
+        "text": "Tai nạn giao thông xảy ra chỉ với một xe.",
+        "correct": false
+      },
+      {
+        "text": "Va chạm giao thông không bao giờ bị phạt.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Bác sĩ vẽ bản đồ tim cứu sản phụ thoát cửa tử",
     "content": "Một sản phụ 36 tuổi đã thoát khỏi nguy cơ tử vong trong ca mổ sinh nhờ vào sự can thiệp kịp thời của bác sĩ. Trong quá trình mang thai, chị gặp phải tình trạng nhịp tim nhanh lên đến 190 lần/phút và không đáp ứng với thuốc điều trị. Các bác sĩ đã sử dụng kỹ thuật lập bản đồ tim 3D để xác định nguyên nhân và thực hiện đốt điện giúp nhịp tim trở lại bình thường, đảm bảo sự an toàn cho cả mẹ và bé.",
     "link": "https://vnexpress.net/bac-si-ve-ban-do-tim-cuu-san-phu-thoat-cua-tu-4858948.html",
@@ -4213,33 +4244,6 @@
       },
       {
         "text": "Không thực hiện mổ mà chỉ theo dõi tình trạng",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Cách phân biệt giữa 'va chạm giao thông' và 'tai nạn giao thông'",
-    "content": "Bài viết phân tích sự khác biệt giữa 'va chạm giao thông' và 'tai nạn giao thông' dựa trên mức độ gây thiệt hại về người và tài sản. Va chạm giao thông được định nghĩa là những sự cố có thiệt hại dưới mức quy định của tai nạn giao thông, như gây thương tích cho một người với tỷ lệ thương tật dưới 11% hoặc thiệt hại tài sản dưới 10 triệu đồng. Ngược lại, tai nạn giao thông có mức độ thiệt hại nghiêm trọng hơn, dẫn đến việc xử lý pháp lý khác nhau, trong đó tai nạn có thể bị truy cứu trách nhiệm hình sự.",
-    "link": "https://vnexpress.net/cach-phan-biet-giua-va-cham-giao-thong-va-tai-nan-giao-thong-4859145.html",
-    "cat": "phap-luat",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Va chạm giao thông khác tai nạn giao thông như thế nào?",
-    "answers": [
-      {
-        "text": "Va chạm giao thông có thiệt hại nhẹ hơn tai nạn giao thông.",
-        "correct": true
-      },
-      {
-        "text": "Va chạm giao thông luôn gây thiệt hại nặng nề.",
-        "correct": false
-      },
-      {
-        "text": "Tai nạn giao thông xảy ra chỉ với một xe.",
-        "correct": false
-      },
-      {
-        "text": "Va chạm giao thông không bao giờ bị phạt.",
         "correct": false
       }
     ]
@@ -4419,33 +4423,6 @@
     ]
   },
   {
-    "title": "Toàn quốc dự kiến giảm còn 2.500 đơn vị hành chính cấp xã",
-    "content": "Phó thủ tướng Nguyễn Hòa Bình thông báo rằng số lượng đơn vị hành chính cấp xã trên toàn quốc sẽ giảm từ hơn 10.500 xuống còn 2.500 sau khi thực hiện sáp nhập. Việc sáp nhập này dự kiến sẽ hoàn thành vào tháng 6 năm 2025. Trung ương sẽ ban hành tiêu chí cho các địa phương để xây dựng phương án sắp xếp, đồng thời nâng cao chất lượng cán bộ cấp xã để tương đương với cán bộ cấp tỉnh.",
-    "link": "https://vnexpress.net/toan-quoc-du-kien-giam-con-2-500-don-vi-hanh-chinh-cap-xa-4859152.html",
-    "cat": "thoi-su",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Việt Nam dự kiến có bao nhiêu đơn vị hành chính cấp xã sau khi sáp nhập?",
-    "answers": [
-      {
-        "text": "2.500",
-        "correct": true
-      },
-      {
-        "text": "10.000",
-        "correct": false
-      },
-      {
-        "text": "8.500",
-        "correct": false
-      },
-      {
-        "text": "5.000",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Cả nước dự kiến giảm còn 2.500 đơn vị hành chính cấp xã",
     "content": "Phó thủ tướng Nguyễn Hòa Bình cho biết cả nước dự kiến sẽ giảm số lượng đơn vị hành chính cấp xã từ hơn 10.500 xuống còn 2.500 sau khi thực hiện sáp nhập. Việc này dự kiến sẽ hoàn thành vào tháng 6 tới, với các tiêu chí sẽ được Trung ương ban hành để các địa phương lập phương án sắp xếp. Chất lượng cán bộ cấp xã cũng sẽ được nâng cao, nhằm tăng cường hiệu quả quản lý.",
     "link": "https://vnexpress.net/ca-nuoc-du-kien-giam-con-2-500-don-vi-hanh-chinh-cap-xa-4859152.html",
@@ -4472,6 +4449,33 @@
       },
       {
         "text": "3.500",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Toàn quốc dự kiến giảm còn 2.500 đơn vị hành chính cấp xã",
+    "content": "Phó thủ tướng Nguyễn Hòa Bình thông báo rằng số lượng đơn vị hành chính cấp xã trên toàn quốc sẽ giảm từ hơn 10.500 xuống còn 2.500 sau khi thực hiện sáp nhập. Việc sáp nhập này dự kiến sẽ hoàn thành vào tháng 6 năm 2025. Trung ương sẽ ban hành tiêu chí cho các địa phương để xây dựng phương án sắp xếp, đồng thời nâng cao chất lượng cán bộ cấp xã để tương đương với cán bộ cấp tỉnh.",
+    "link": "https://vnexpress.net/toan-quoc-du-kien-giam-con-2-500-don-vi-hanh-chinh-cap-xa-4859152.html",
+    "cat": "thoi-su",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Việt Nam dự kiến có bao nhiêu đơn vị hành chính cấp xã sau khi sáp nhập?",
+    "answers": [
+      {
+        "text": "2.500",
+        "correct": true
+      },
+      {
+        "text": "10.000",
+        "correct": false
+      },
+      {
+        "text": "8.500",
+        "correct": false
+      },
+      {
+        "text": "5.000",
         "correct": false
       }
     ]
@@ -4530,37 +4534,6 @@
       },
       {
         "text": "Để cải thiện tình hình kinh tế của đất nước.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Cháy lớn xưởng sản xuất sơn ở Đồng Nai",
-    "content": "Vào tối ngày 10/3/2025, một vụ cháy lớn đã xảy ra tại xưởng sản xuất sơn ở xã Bình Minh, huyện Trảng Bom, Đồng Nai. Ngọn lửa bùng lên sau nhiều tiếng nổ lớn và nhanh chóng lan rộng do bên trong chứa nhiều chất dễ cháy. Mặc dù người dân và nhân viên cố gắng dập lửa nhưng không thành công. Lực lượng cứu hỏa đã được điều động đến hiện trường để khống chế đám cháy, trong khi nhiều người dân phải di dời đồ đạc do xưởng nằm cạnh khu dân cư.",
-    "link": "https://vnexpress.net/chay-lon-xuong-san-xuat-son-o-dong-nai-4859343.html",
-    "cat": "thoi-su",
-    "positivity": 2,
-    "importance": 7,
-    "question": "Vụ cháy xưởng sản xuất sơn ở Đồng Nai xảy ra vào thời gian nào?",
-    "answers": [
-      {
-        "text": "Tối ngày 10/3/2025",
-        "correct": true
-      },
-      {
-        "text": "Sáng ngày 10/3/2025",
-        "correct": false
-      },
-      {
-        "text": "Chiều ngày 10/3/2025",
-        "correct": false
-      },
-      {
-        "text": "Tối ngày 11/3/2025",
-        "correct": false
-      },
-      {
-        "text": "Sáng ngày 11/3/2025",
         "correct": false
       }
     ]
